--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".PassengerInboxActivity"
+            android:name="com.example.uberapp_tim26.activities.PassengerInboxActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -22,7 +22,7 @@
         </activity>
 
         <activity
-            android:name=".PassengerAccountActivity"
+            android:name="com.example.uberapp_tim26.activities.PassengerAccountActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -30,7 +30,7 @@
         </activity>
 
         <activity
-            android:name=".PassengerMainActivity"
+            android:name="com.example.uberapp_tim26.activities.PassengerMainActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -38,7 +38,7 @@
         </activity>
 
         <activity
-            android:name=".PassengerRegisterActivity"
+            android:name="com.example.uberapp_tim26.activities.PassengerRegisterActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -46,20 +46,15 @@
         </activity>
 
         <activity
-            android:name=".UserLoginActivity"
+            android:name="com.example.uberapp_tim26.activities.UserLoginActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
+        
         <activity
-            android:name=".ui.login.UserLoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_user_login" />
-
-        <activity
-            android:name=".SplashActivity"
+            android:name="com.example.uberapp_tim26.activities.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
