--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,49 +12,50 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UberApp_Tim26"
         tools:targetApi="31">
-
         <activity
-            android:name="com.example.uberapp_tim26.activities.PassengerInboxActivity"
+            android:name=".PassengerHistoryActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
-            android:name="com.example.uberapp_tim26.activities.PassengerAccountActivity"
+            android:name=".PassengerInboxActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
-            android:name="com.example.uberapp_tim26.activities.PassengerMainActivity"
+            android:name=".PassengerAccountActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
-            android:name="com.example.uberapp_tim26.activities.PassengerRegisterActivity"
+            android:name=".PassengerMainActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
-            android:name="com.example.uberapp_tim26.activities.UserLoginActivity"
+            android:name=".PassengerRegisterActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
-            android:name="com.example.uberapp_tim26.activities.SplashActivity"
+            android:name=".UserLoginActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
