--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UberApp_Tim26"
         tools:targetApi="31">
+
+        <activity
+            android:name=".activities.DriverAccountActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
         <activity
             android:name=".activities.PassengerHistoryActivity"
             android:exported="false">
@@ -26,6 +35,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
         <activity
             android:name=".activities.PassengerAccountActivity"
             android:exported="false">
@@ -33,6 +43,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
         <activity
             android:name=".activities.PassengerMainActivity"
             android:exported="false">
@@ -40,6 +51,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
         <activity
             android:name=".activities.PassengerRegisterActivity"
             android:exported="false">
@@ -47,6 +59,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
         <activity
             android:name=".activities.UserLoginActivity"
             android:exported="false">
@@ -54,6 +67,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        
         <activity
             android:name=".activities.SplashActivity"
             android:exported="true">
