--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UberApp_Tim26"
         tools:targetApi="31">
-
+        <activity
+            android:name=".activities.DriverInboxActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".activities.DriverMainActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".activities.DriverAccountActivity"
             android:exported="false">
@@ -20,7 +33,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".activities.PassengerHistoryActivity"
             android:exported="false">
@@ -35,7 +47,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".activities.PassengerAccountActivity"
             android:exported="false">
@@ -43,7 +54,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".activities.PassengerMainActivity"
             android:exported="false">
@@ -51,7 +61,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".activities.PassengerRegisterActivity"
             android:exported="false">
@@ -59,7 +68,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".activities.UserLoginActivity"
             android:exported="false">
@@ -67,7 +75,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        
         <activity
             android:name=".activities.SplashActivity"
             android:exported="true">
