--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,13 @@
         tools:targetApi="31">
 
         <activity
+            android:name=".activities.RideHistoryDetailsActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".activities.ChangePasswordActivity"
             android:exported="false">
             <meta-data
